<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>tnighnty</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version> <!-- Or whatever JUnit you're using. -->
        </dependency>

        <!-- https://mvnrepository.com/artifact/net.sf.robocode/robocode.api -->
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.api</artifactId>
            <version>1.9.4.3</version>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.core</artifactId>
            <version>1.9.4.3</version>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.robocode</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/robocode.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.pincontainer</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/picocontainer-2.14.2.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.roborumble</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/roborumble.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.ui</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/robocode.ui-1.9.4.3.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.repository</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/robocode.repository-1.9.4.3.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.host</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/robocode.host-1.9.4.3.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.battle</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/robocode.battle-1.9.4.3.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.annotations</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/annotations-13.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.bcel</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/bcel-6.2.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.codesize</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/codesize-1.2.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.kotlin</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/kotlin-stdlib-1.5.20.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.kotlin.common</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/kotlin-stdlib-common-1.5.20.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.sound</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/robocode.sound-1.9.4.3.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.robocode</groupId>
            <artifactId>robocode.ui.editor</artifactId>
            <version>1.9.4.3</version>
            <scope>system</scope>
            <systemPath>${user.home}/robocode/libs/robocode.ui.editor-1.9.4.3.jar</systemPath>
        </dependency>
    </dependencies>

</project>